Fix dark mode of search

--- a/src/assets/css/dark.css
+++ b/src/assets/css/dark.css
@@ -682,7 +682,7 @@
 .dark .row > .col > label.search-input > *,
 .dark .row > label.search-input > *,
 .dark .search-input > * {
-  border-color: #4c4c4c !important;
+  border-color: #b2b2b2 !important;
 }
 .dark .cover>i:first-child {
   background: #fff;
